# SystemSim

./: .gitignore  README.md  TODO.md  components.json  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  tsconfig.web.json
src/backend/: .gitignore  ARCHITECTURE.md  SystemSim-backend.spec  database.py  main.py  opc_handler.py  opc_routes.py  sfc_config_routes.py  sfc_manager.py  sfc_routes.py  simulation_routes.py  systemsim.db  utils.py
src/main/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/SFC/: page.tsx
src/renderer/src/assets/: tailwind.css
src/renderer/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  nav-documents.tsx  opc-autocomplete.tsx  section-cards.tsx
src/renderer/src/components/ui/: alert.tsx  bottom-bar.tsx  dialog.tsx  sidebar.tsx
src/renderer/src/dashboard/: page.tsx
src/renderer/src/lib/: downsampling.ts
src/renderer/src/opc-nodes/: page.tsx
src/renderer/src/opc-server/: page.tsx
src/renderer/src/sfc-config/: page.tsx
src/renderer/src/sfc-editor/: page.tsx
src/renderer/src/simulation-config/: page.tsx
src/renderer/src/simulation-reports/: page.tsx
