[project]
name = "SystemSim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "opcua>=0.98.0",
    "cryptography>=41.0.0",
    "dotenv>=0.9.9",
    "dotenvx>=0.0.0",
    "fastapi>=0.122.0",
    "opcua>=0.98.13",
    "pyinstaller>=6.17.0",
    "uvicorn>=0.38.0",
]
